Lock first and second steps after following steps are saved. re #423

--- a/afs/templates/views/components/workflows/upload-dataset/instrument-info-step.htm
+++ b/afs/templates/views/components/workflows/upload-dataset/instrument-info-step.htm
@@ -10,6 +10,7 @@
                 ],
                 renderContext: 'workflow', 
                 value: instrumentValue,
+                disabled: locked
             }
         }"></div>
     </div>
@@ -23,6 +24,7 @@
                 ],
                 renderContext: 'workflow', 
                 value: procedureValue,
+                disabled: locked
             }
         }"></div>
     </div>
@@ -33,6 +35,7 @@
             params: {
                 renderContext: 'workflow', 
                 value: parameterValue,
+                disabled: locked
             }
         }"></div>
     </div>
@@ -45,6 +48,7 @@
                 params: {
                     renderContext: 'workflow', 
                     value: nameValue,
+                    disabled: locked
                 }
             }"></div>
         </div>
