--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -496,3 +496,12 @@
     margin-left: 0px;
     margin-right: 0px;
 }
+
+.analysis-areas-workflow-regions-step .cke_top, 
+.analysis-areas-workflow-regions-step .cke_bottom {
+    display: none;
+}
+
+.analysis-areas-workflow-regions-step .cke_contents {
+    height: 120px !important;
+} 
