Update add things step w/ component based, #430

--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -496,3 +496,10 @@
     margin-left: 0px;
     margin-right: 0px;
 }
+
+.create-project-add-things-step {
+    margin-left: 0px;
+    margin-right: 0px;
+    height: 100%;
+    width: 100%;
+}
