show annotations tab, but hide editor tab #453

--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -507,3 +507,7 @@
 .analysis-areas-workflow-regions-step .cke_contents {
     height: 120px !important;
 } 
+
+.analysis-areas-workflow-regions-step .iiif-annotation-editor-tab {
+    display: none;
+}
