--- a/afs/templates/views/components/workflows/analysis-areas-annotation-step.htm
+++ b/afs/templates/views/components/workflows/analysis-areas-annotation-step.htm
@@ -106,7 +106,7 @@
                             </table>
                         </div>
         
-                        <button
+                        <!-- <button
                             type="button"
                             class="btn"
                             style="
@@ -115,17 +115,42 @@
                                 color: #eee;
                                 width: 100%;
                             "
-                            data-bind="click: $data.loadNewAnalysisAreaTile"
+                            data-bind="{
+                                click: $data.loadNewAnalysisAreaTile,
+                            }"
+                        >
+                            <i class="fa fa-folder"></i>
+                            <span>
+                                {% trans 'Add New Analysis Area' %}
+                            </span>
+                        </button> -->
+        
+                        <button
+                            type="button"
+                            style="
+                                margin-top: 6px;
+                                background: #9490EE;
+                                color: #eee;
+                                width: 100%;
+                            "
+                            data-bind="{
+                                click: $data.loadNewAnalysisAreaTile,
+                                attr: {
+                                    class: ( $data.selectedAnalysisAreaInstance() && !$data.selectedAnalysisAreaInstance().tileid ) ? 'btn disabled' : 'btn'
+                                }
+                            }"
                         >
                             <i class="fa fa-folder"></i>
                             <span>
                                 {% trans 'Add New Analysis Area' %}
                             </span>
                         </button>
+
+
                     </div>
                 </div>
 
-                <!-- ko if: card.widgets().length > 0 -->
+                <!-- ko if: $data.selectedAnalysisAreaInstance() -->
                 {% block form_widgets %}
                     <form class="widgets" style="margin-bottom: 20px;">
                         <!-- ko if: $data.partIdentifierAssignmentLabelWidget() -->
