--- a/afs/templates/views/components/workflows/review-dataset/review-dataset-final-step.htm
+++ b/afs/templates/views/components/workflows/review-dataset/review-dataset-final-step.htm
@@ -6,8 +6,8 @@
         <div style="display: inline-flex; width: inherit; justify-content: space-between;">
             <div style="display: flex; flex-direction: column;">
                 <a data-bind="attr: { href: urls.resource + '/' + resourceid}" target="_blank">
-                    <div class="summary-value">
-                        {% trans 'Physical Thing Resource Instance' %}
+                    <div class="summary-value" 
+                        data-bind = "text: displayName + ' ({% trans 'Physical Thing Instance' %})'">
                     </div>
                 </a>
             </div>
@@ -24,24 +24,38 @@
                 </div>
                 <div style="display: inline-flex;">
                     <div class="summary-label" data-bind="text: 'Sampled Object' + ':'"></div>
-                    <div class="summary-value" data-bind="text: 'test'"></div>
+                    <div class="summary-value" data-bind="text: 'This will probably be removed!!!'"></div>
                 </div>
             </div>
         </div>
     </div>
 
-    <!-- ko foreach: {data: selectedDatasetData, as: 'selectedDataset'} -->
     <div class="afs-final-step-section" style="padding: 15px; display: flex; flex-direction: column">
         <h5 class="summary-value">{% trans 'Dataset Name and Associated Files' %}</h5>
-        <div style="display: inline-flex; width: inherit; justify-content: space-between;">
-            <div style="display: flex; flex-direction: column;">
+        <div>
+            <table data-bind="datatable: tableConfig" class="table table-striped table-bordered" width="100%">
+                <thead>
+                    <tr>
+                        <th>{% trans "File Name:" %}</th>
+                        <th>{% trans "Interpretation" %}</th>
+                        <th>{% trans "File Parameters" %}</th>
+                    </tr>
+                </thead>
+                <tbody data-bind="foreach: {data: fileList, as: 'file'}">
+                    <tr>
+                        <td><div class="summary-value" data-bind="text: file.name"></div></td>
+                        <td><div class="summary-value" data-bind="text: file.interpretation"></div></td>
+                        <td><div class="summary-value" data-bind="text: file.parameters"></div></td>
+                    </tr>
+                <tbody>
+            </table>
+            <div class="final-step-section-block-item">
                 <div style="display: inline-flex;">
-                    <div class="summary-label" data-bind="text: 'Name: '"></div>
-                    <div class="summary-value" data-bind="text: selectedDataset.displayname"></div>
+                    <div class="summary-label">{% trans 'Files: ' %}</div>
+                    <div class="summary-value" data-bind="text: fileList().length + '{% trans " files uploaded" %}'"></div>
                 </div>
             </div>
         </div>
     </div>
-    <!-- /ko -->
 </div>
 <!-- /ko -->
