update geom deletion logic #458

--- a/afs/templates/views/components/workflows/analysis-areas-annotation-step.htm
+++ b/afs/templates/views/components/workflows/analysis-areas-annotation-step.htm
@@ -403,7 +403,7 @@
                         <button 
                             class="btn btn-danger" 
                             style="width: 48%;"
-                            data-bind="click: $data.tile.reset"
+                            data-bind="click: $data.resetAnalysisAreasTile"
                         >
                             <i class="ion-android-cancel"></i>
                             <span style="padding-left: 4px">{% trans 'Cancel' %}</span>
