rough out geom edit #458

--- a/afs/templates/views/components/workflows/analysis-areas-annotation-step.htm
+++ b/afs/templates/views/components/workflows/analysis-areas-annotation-step.htm
@@ -246,7 +246,13 @@
                                         </div>
                                     </div>
                                     <div class="map-card-feature-list">
-                                        <div class="add-new-feature" data-bind="visible: !self.disableDrawing()">
+                                        <div 
+                                            class="add-new-feature" 
+                                            data-bind="{
+                                                visible: !self.disableDrawing(),
+                                                click: function() { self.tile.reset(); self.resetCanvasFeatures(); self.drawFeatures([]); self.highlightAnnotation(); },
+                                            }"
+                                        >
                                             <select data-placeholder="{% trans "Add a new feature..." %}" data-bind="
                                                 value: self.featureLookup[widget.node_id()].selectedTool,
                                                 valueAllowUnset: true,
