--- a/afs/templates/views/components/workflows/upload-dataset/select-phys-thing-step.htm
+++ b/afs/templates/views/components/workflows/upload-dataset/select-phys-thing-step.htm
@@ -33,7 +33,7 @@
         This project has no associated Objects. Your project must have an associated Object Collection with an Object before proceeding.
     </div>
     <!-- /ko -->
-    <!-- ko if: isPhysicalThingValid() === false -->
+    <!-- ko if: validateThing && isPhysicalThingValid() === false -->
     <div class="tabbed-workflow-step-information-box widget-input-label" style="text-align: center; margin-top: 16px; height:fit-content; background-color: #fde9ad;">
         The selected physical thing is invalid.  Complete the Analysis Area or Sample Taking workflow before proceeding.
     </div>
