--- a/afs/templates/views/components/workflows/object-search-step.htm
+++ b/afs/templates/views/components/workflows/object-search-step.htm
@@ -22,7 +22,7 @@
                         }, css: {'selected-instance': $parent.value().map(function(r){return r.resourceId}).indexOf($data['_source']['resourceinstanceid']) >= 0},
                         click: function(){$parent.updateTileData($data['_source']['resourceinstanceid'])}"></div>
                     </div>
-                    <!-- TODO: Implement resource report abstract once custom phys thing is complete -->
+                    <!-- TODO: Implement resource report abstract once custom phys thing report is complete -->
                     <!-- <div data-bind="foreach: targetResources">
                         <div data-bind="component: { 
                             name: 'resource-report-abstract',
