--- a/afs/templates/views/components/workflows/sample-taking-workflow/sample-taking-sample-location-step.htm
+++ b/afs/templates/views/components/workflows/sample-taking-workflow/sample-taking-sample-location-step.htm
@@ -115,7 +115,12 @@
                                 color: #eee;
                                 width: 100%;
                             "
-                            data-bind="click: $data.loadNewSampleLocationTile"
+                            data-bind="
+                                click: $data.loadNewSampleLocationTile,
+                                attr: {
+                                    class: ( $data.selectedSampleLocationInstance() && !$data.selectedSampleLocationInstance().tileid ) ? 'btn disabled' : 'btn'
+                                }
+                            "
                         >
                             <i class="fa fa-folder"></i>
                             <span>
@@ -125,7 +130,7 @@
                     </div>
                 </div>
 
-                <!-- ko if: card.widgets().length > 0 -->
+                <!-- ko if: $data.selectedSampleLocationInstance() -->
                 {% block form_widgets %}
                     <form class="widgets" style="margin-bottom: 20px;">
                         <!-- BEGIN geometry table -->
@@ -396,7 +401,7 @@
                         <button 
                             class="btn btn-danger" 
                             style="width: 48%;"
-                            data-bind="click: $data.tile.reset"
+                            data-bind="click: $data.resetSampleLocationTile"
                         >
                             <i class="ion-android-cancel"></i>
                             <span style="padding-left: 4px">{% trans 'Cancel' %}</span>
