--- a/afs/templates/views/components/workflows/create-project-workflow/add-things-step.htm
+++ b/afs/templates/views/components/workflows/create-project-workflow/add-things-step.htm
@@ -10,21 +10,21 @@
     <div class="workflow-search-results">
         <div class="workflow-search-results-full-container">
             <div class="workflow-search-list-container"> 
-                <div class="workflow-search-list">
-                    <div data-bind="component: {
-                        name: 'search-results',
-                        params: {
-                            selectedTab,
-                            searchResults,
-                            targetResources,
-                            toggleRelationshipCandidacy,
-                            isResourceRelatable,
-                            reportLookup,
-                            filters,
-                            value,
-                            updateTileData: updateTileData
-                        }
-                    }"></div>
+                <div class="workflow-search-list search-result-details">
+                    <div data-bind="css: {'loading-mask': reportDataLoading}">
+                        <div data-bind="foreach: targetResources">
+                            <div data-bind="component: { 
+                                name: 'resource-report-abstract',
+                                params: {
+                                    report: $data.report,
+                                    summary: true
+                                }
+                            }, css: {'selected-instance': $parent.value().map(function(r){return r.resourceId}).indexOf($data['_source']['resourceinstanceid']) >= 0},
+                            click: function(){$parent.updateTileData($data['_source']['resourceinstanceid'])}">
+                            </div>
+                            <hr style="margin: 0"></hr>
+                        </div>
+                    </div>
                 </div>
                 
                 <div class="search-results-footer">
